Modals are all above zindex 1300 to avoid overlapping rts topbar

--- a/public/css/rts.css
+++ b/public/css/rts.css
@@ -34,6 +34,11 @@ h4 {
     font-weight: normal;
 }
 
+/* so modals are always above topbar */
+.modal-open .modal {
+    z-index: 1350;
+}
+
 .btn-link {
     color: #af001e;
     font-size: 16px !important;
